--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,15 +1,35 @@
+{% extends "blog/base.html" %}
+
+
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'blog/base.css' %}" />
 
-{% if article_list %}
-    <ul>
+{% block content %}
+
+	{% if article_list %}
+	    
 	    {% for article in article_list %}
-	        <li>
-	        	<a href="">{{ article.title }}</a>
-	        </li>
+			<div class="article_body">
+				<div class='article_title'>
+		        	<a href="">{{ article.title }}</a>
+		        </div>
+		        <br>
+		        <div class="article_content">
+		        	{{ article.content }}
+		        </div>
+		        <br>
+		        <div class="article_footer">
+		        	{{ article.pub_date }}
+		        </div>
+		        
+			</div>
+	        
 	    {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+	    
+	{% else %}
+	    <p>没有相关文章</p>
+	{% endif %}
+
+
+{% endblock %}
