--- a/blog/static/blog/content.css
+++ b/blog/static/blog/content.css
@@ -1,4 +1,4 @@
-
+/*
 .article_title {
 	width: 80%;
 	margin: 0 auto;
@@ -6,4 +6,9 @@
 }
 .article_content {
 	border-left: 2px black solid;
+}*/
+
+.content_detail {
+	width: 90%;
+	color: red;
 }
