--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -22,15 +22,19 @@
 			</div>
 		</div>
 
-		<div class="article_body">
+		<div class="article_nav">
 			<div class='last_article'>
 				<a href="">
-					上一篇
+					<img src="{% static 'blog/images/last.png' %}" alt="">
+					<img src="{% static 'blog/images/last.png' %}" alt="">
+					<!-- 上一篇 -->
 				</a>
 			</div>
 			<div class='next_article'>
 				<a href="">
-					上一篇
+					<!-- 下一篇 -->
+					<img src="{% static 'blog/images/next.png' %}" alt="">
+					<img src="{% static 'blog/images/next.png' %}" alt="">
 				</a>
 			</div>
 		</div>
