--- a/blog/static/blog/base.css
+++ b/blog/static/blog/base.css
@@ -14,16 +14,25 @@ body {
 	width: 25%;
 	height: 100%;
 	background-color: gray;
-	/*background: white url("images/back.jpeg") no-repeat right bottom; */
+	background-image: url(http://upload.jianshu.io/daily_images/images/Czsixn23v5cAeKuwMnEu.jpg);
+    top: 0;
+    left: 0;
+    /*width: 100%;*/
+    /*height: 100%;*/
+    background-position: center;
+    background-size: cover;
 }
+
+/*方案一*/
+/*
 .nav_header {
 	height: 25%;
-	background-color: red;
 }
 .nav_img {
 	width: 160px;
-	height: 160px;
+	height: 30%;
 	margin: 0 auto;
+	opacity: 0.8;
 }
 .nav_img img{
 	width: 150px;
@@ -35,38 +44,117 @@ body {
 .nav_tag {
 	width: 100%;
 	height: 50%;
-	/*margin: 0 auto;*/
 	margin-top: -20%;
-	background-color: red;
 }
 .nav_tag_list {
-	/*width: 100%;
-	margin: 0 auto;*/
-	display: block;
-	text-align: center;
+	width: 80%;
+	margin: 0 auto;
+	list-style: none;
+	padding: 0px;加上这句ul就能居中，邪了门了
+
 }
 .nav_tag_list li{
-	list-style: none;
+	margin-top: 5px;
 	text-align: center;
 	height: 20px;
 	padding: 10px;
+	line-height: 20px;
+
 }
 .nav_tag_list li a {
+	padding: 10px;
+	border-radius: 20px;
+	border: 1px white solid;
 	text-decoration: none;
-	color: black;
+	color: white;
 }
 .nav_tag_list li a:hover {
-	color: black;
+	color: rgb(121,189,71);
 	font-size: 20px;
 }
 .nav_footer {
 	text-align: center;
 	color: yellow;
 }
+.nav_footer a {
+	text-decoration: none;
+	font-size: 12px;
+}
+*/
 
-
+/*方案二*/
+.nav_introduce {
+	height: 96%;
+}
+.nav_introduce_none {
+	height: 80%;
+}
+.nav_introduce_header {
+	height: 10%;
+	line-height: 20%;
+	width: 70%;
+	margin: 0 auto;
+	color: white;
+	font-size: 40px;
+}
+.nav_introduce_header a {
+	text-decoration: none;
+	color: white;
+}
+.nav_introduce_content {
+	height: 10%;
+	line-height: 20%;
+	width: 70%;
+	margin: 0 auto;
+	color: white;
+	font-size: 25px;
+}
+.nav_footer {
+	height: 4%;
+	text-align: center;
+}
+.nav_footer a {
+	font-size: 12px;
+	color: yellow;
+	text-decoration: none;
+}
 
 /*------------------右侧文本栏------------------------*/
+
+/*#############################################*/
+/*方案二*/
+.content_nav {
+	top: 0;
+	width: 100%;
+	height: 50px;
+	position: fixed;
+	/*background-color: rgb(62,181,43);*/
+	background-color: rgb(233,233,233);
+}
+/*.content_nav ul {
+	display: block;
+}*/
+.content_nav ul li {
+	float: left;
+	list-style: none;
+	/*width: 100px;*/
+}
+.content_nav ul li a {
+	padding: 10px;
+	margin-right: 20px;
+	color: black;
+	font-size: 14px;
+	text-decoration: none;
+	border-radius: 18px;
+	border: 1px gray solid;
+}
+#content_active {
+	color: white;
+	background-color: rgb(222,107,93);
+	/*font-size: 40px;*/
+}
+/*#############################################*/
+
 .content {
 	float: left;
 	position: absolute;
@@ -78,7 +166,7 @@ body {
 	width: 90%;
 	margin: 0 auto;
 	background-color: white;
-	margin-top:20px; 
+	margin-top:10px; 
 	padding: 10px;
 }
 .article_title {
@@ -119,6 +207,13 @@ body {
 	text-align: center;
 	color: gray;
 }
+.article_nav {
+	width: 90%;
+	height: 20px;
+	margin: 0 auto;
+	margin-top: 20px;
+	background-color: rgb(233,233,233);
+}
 .last_article {
 	float: left;
 }
@@ -126,10 +221,15 @@ body {
 .next_article {
 	float: right;
 }
-.article_body a {
+.article_nav a {
+
 	text-decoration: none;
 }
+.article_nav a img {
 
+	width: 20px;
+	height: 20px;
+}
 
 
 
