--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -52,6 +52,7 @@
 					<li><a href="">iOS</a></li>
 					<li><a href="">svn/git</a></li>
 					<li><a href="">随笔</a></li>
+					<li><a href="">关于我</a></li>
 				</ul>
 			</div>
 			<br>
