--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -7,30 +7,30 @@
 {% block content %}
 
 	{% autoescape off %}
-		<div class='article_body'>
+		<div class='detail_body'>
 			<div>
-				<h1 class='content_detail_title'>
+				<h1 class='detail_article_title'>
 					{{ article.title }}
 				</h1>
-				<h6 class='content_detail_pub-date'>
+				<h6 class='detail_article_pub-date'>
 					{{ article.pub_date }}
 				</h6>
 			</div>
 			<hr>
-			<div class="content_detail_content">
+			<div class="detail_article_content">
 				{{ article.content }}
 			</div>
 		</div>
 
-		<div class="article_nav">
-			<div class='last_article'>
+		<div class="detail_article_nav">
+			<div class='detail_article_last_article'>
 				<a href="">
 					<img src="{% static 'blog/images/last.png' %}" alt="">
 					<img src="{% static 'blog/images/last.png' %}" alt="">
 					<!-- 上一篇 -->
 				</a>
 			</div>
-			<div class='next_article'>
+			<div class='detail_article_next_article'>
 				<a href="">
 					<!-- 下一篇 -->
 					<img src="{% static 'blog/images/next.png' %}" alt="">
