--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -45,7 +45,7 @@
 		<div class="content">
 			<!-- 方案二 -->
 
-			<div class='content_nav'>
+			<!-- <div class='content_nav'>
 				<ul>
 					<li><a href="" id='content_active'>所有文章</a></li>
 					<li><a href="">python</a></li>
@@ -57,9 +57,9 @@
 			</div>
 			<br>
 			<br>
-			<br>
+			<br> -->
 			{% block content %}
-				文章正文hahah
+				文章正文
 			{% endblock %}
 		</div>
 
