--- a/blog/static/blog/base.css
+++ b/blog/static/blog/base.css
@@ -212,6 +212,9 @@ body {
 	color: gray;
 }
 
+
+
+
 /*-------------详情页----------------------*/
 .detail_body {
 	width: 90%;
@@ -227,6 +230,21 @@ body {
 	text-align: center;
 	color: gray;
 }
+.detail_article_star {
+	width: 5%;
+	margin: 0 auto;
+}
+.detail_article_star p {
+	text-align: center;
+	color: red;
+}
+.detail_article_star img {
+	width: 50px;
+	height: 50px;
+	border-radius: 25px;
+	border: 1px gray solid;
+}
+
 .detail_article_nav {
 	width: 90%;
 	height: 20px;
@@ -253,10 +271,44 @@ body {
 
 
 
-
-
-
-
+/*------------------about页面-------------------------------*/
+.about {
+	/*width: 100%;*/
+	height: 100%;
+	/*background-color: red;*/
+}
+.about_left {
+	float: left;
+	width: 30%;
+	text-align: center;
+	vertical-align: middle;
+	/*background-color: red;*/
+}
+.about_left img {
+	width: 200px;
+	height: 200px;
+	border: 1px red solid;
+}
+.about_right {
+	float: right;
+	width: 70%;
+}
+.about_clear {
+	clear: both;
+}
+.about_python {
+	/*text-align: center;*/
+	width: 80%;
+	margin: 0 auto;
+}
+.about_github {
+	text-decoration: none;
+	color: black;
+}
+.about_ad {
+	/*background-color: green;*/
+	color: green;
+}
 
 
 
