--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,7 +32,7 @@
 			<div class="nav_introduce">
 				<div class="nav_introduce_none"></div>
 				<div class="nav_introduce_header">
-					<a href="">Dory</a>
+					<a href="http://github.doryhome.com" target='_blank'>Dory</a>
 				</div>
 				<div class="nav_introduce_content">
 					分享、沟通
