--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,11 +5,12 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'blog/base.css' %}" />
 
+
 {% block content %}
 
-	{% if article_list %}
-	    
-	    {% for article in article_list %}
+	{% if articles %}
+
+	    {% for article in articles %}
 
 			<!-- <div class='content_nav'>
 				<ul>
@@ -60,6 +61,22 @@
 	        
 	    {% endfor %}
 	    
+		<div class='articles_pagination'>
+		    <!-- <span class="step-links"> -->
+		        {% if articles.has_previous %}
+		            <a href="?page={{ articles.previous_page_number }}">上一页</a>
+		        {% endif %}
+
+		        <!-- <span class="current">
+		            Page {{ articles.number }} of {{ articles.paginator.num_pages }}.
+		        </span> -->
+
+		        {% if articles.has_next %}
+		            <a href="?page={{ articles.next_page_number }}">下一页</a>
+		        {% endif %}
+		    <!-- </span> -->
+		</div>
+		
 	{% else %}
 		<div class="article_body">
 		    <p>抱歉还没有相关文章，请浏览其他标签!</p>
